maze.island.IslandMaze.scala.error
Compilation error:
IslandMaze:2: error: Missing closing brace `}' assumed here
def isWallAtLeft () : Boolean = {
^IslandMaze:2: error: expected class or object definition
def isWallAtLeft () : Boolean = {
^IslandMaze:9: error: expected class or object definition
def followTheLeftSide() {
^